# Copyright 2020 Verizon Inc.
# Licensed under the terms of the Apache License 2.0.
# See LICENSE file in project root for terms.

[metadata]
author = Herbert Shin
author_email = herbert.shin@verizon.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = safecache is a thread-safe and mutation-safe LRU cache for Python
keywords = lru-cache, thread-safety, mutation-safety
license = Apache 2.0
long_description = file:README.md
long_description_content_type = text/markdown
name = safecache
project_urls =
	Source = https://github.com/Verizon/safecache
url = https://github.com/Verizon/safecache

# The version below will be overwritten and
# updated by the CI Pipeline version job.
version = 0.2.0

[options]
packages =
    safecache

python_requires = >=3.4

[pycodestyle]
ignore = W293
max_line_length = 160
